<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wave="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hdu.easyaccount.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/ToolbarTitleCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="结余"
                                android:textColor="@color/colorBrown" />

                            <TextView
                                android:id="@+id/balance_text_activity_month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textColor="@color/colorBrown"
                                android:textSize="30sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="收入￥"
                                android:textColor="@color/colorBrown" />

                            <TextView
                                android:id="@+id/income_text_activity_month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/zero"
                                android:textColor="@color/colorBrown" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="支出￥"
                                android:textColor="@color/colorBrown" />

                            <TextView
                                android:id="@+id/expense_text_activity_month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/zero"
                                android:textColor="@color/colorBrown" />
                        </LinearLayout>
                    </LinearLayout>

                    <lecho.lib.hellocharts.view.PieChartView
                        android:id="@+id/month_pie_chart_view"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1" />
                </LinearLayout>


                <lecho.lib.hellocharts.view.LineChartView
                    android:id="@+id/activity_month_line_chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_month"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/back_img_month"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_back_brown" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activity_month_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/account_this_month"
                        android:textColor="@color/colorBrown"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/show_month_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:background="#00000000"
                        android:text="@string/show_month_data"
                        android:textColor="@color/colorBrown" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.hdu.easyaccount.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/month_no_account_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="1px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/no_account" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/month_account_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
